<feat>(<dynamic-thread-pool>):<starter>
- auto config
- domain model
- test model

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 
     <modules>
         <module>atluofu-dynamic-thread-pool-spring-boot-starter</module>
+        <module>atluofu-dynamic-thread-pool-test</module>
     </modules>
 
     <parent>
